[package]
name = "robotiq-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.39.2", features = ["full"]}
tokio-serial = "5.4.4"
tokio-modbus = { version = "0.14.0", features = ["rtu"]}

num = "0.4.3"
num-derive = "0.4.2"
num-traits = "0.2.19"

serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"

thiserror = "1.0.63"